stop horizontal scrolling in index.html

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -28,6 +28,7 @@
 
 body {
     font-family: Poppins-Medium;
+    overflow-x: hidden;
 }
 
 nav {
